--- a/VagrantTray/App.xaml
+++ b/VagrantTray/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="VagrantTray.App"
+﻿<Application x:Class="MikeWaltonWeb.VagrantTray.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="UI/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
