--- a/VagrantTray/UI/MainWindow.xaml
+++ b/VagrantTray/UI/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="VagrantTray.MainWindow"
+﻿<Window x:Class="MikeWaltonWeb.VagrantTray.UI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
