--- a/VagrantTray/UI/SettingsWindow.xaml
+++ b/VagrantTray/UI/SettingsWindow.xaml
@@ -1,13 +1,21 @@
 ﻿<Window
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:ViewModel="clr-namespace:MikeWaltonWeb.VagrantTray.ViewModel" xmlns:local="clr-namespace:MikeWaltonWeb.VagrantTray.UI" mc:Ignorable="d"
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:viewModel="clr-namespace:MikeWaltonWeb.VagrantTray.ViewModel" xmlns:local="clr-namespace:MikeWaltonWeb.VagrantTray.UI"
+    xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+    mc:Ignorable="d"
 	x:Class="MikeWaltonWeb.VagrantTray.UI.SettingsWindow"
 	Title="Vagrant Tray Settings"
 	Width="640" Height="480">
+    
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Closed">
+            <i:InvokeCommandAction Command="{Binding CloseCommand}"></i:InvokeCommandAction>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
 
     <Window.DataContext>
-        <ViewModel:SettingsViewModel/>
+        <viewModel:SettingsViewModel/>
     </Window.DataContext>
 
     <Grid>
@@ -55,9 +63,29 @@
                 </Grid>
             </TabItem>
             <TabItem Header="Settings">
-                <Grid>
-                    <CheckBox Content="Launch at Windows Startup" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-                </Grid>
+                <StackPanel Margin="10">
+					<StackPanel.Resources>
+						<Style TargetType="StackPanel">
+							<Setter Property="Margin" Value="0,10,0,0"/>
+						</Style>
+					</StackPanel.Resources>
+
+                    <StackPanel Orientation="Horizontal">
+                        <CheckBox Content="Launch at Windows startup" HorizontalAlignment="Left" VerticalAlignment="Top" IsChecked="{Binding LaunchOnStartup, Mode=TwoWay}"/>
+                    </StackPanel>
+            		<StackPanel Orientation="Horizontal">
+            			<Label Content="Shell Application"/>
+            			<ComboBox SelectedIndex="0">
+            				<ComboBoxItem Content="Choose Application" IsSelected="True" IsEnabled="False"/>
+            				<ComboBoxItem Content="Command Prompt" Tag="cmd"/>
+            				<ComboBoxItem Content="PowerShell" Tag="powershell"/>
+            				<ComboBoxItem Content="Browse..."/>
+            			</ComboBox>
+            		</StackPanel>
+                    <StackPanel Orientation="Horizontal">
+                        <CheckBox Content="Run Vagrant processes as administrator" HorizontalAlignment="Left" VerticalAlignment="Top" IsChecked="{Binding RunAsAdministrator, Mode=TwoWay}"/>
+                    </StackPanel>
+            	</StackPanel>
             </TabItem>
         </TabControl>
 
