--- a/VagrantTray/UI/BookmarkSettingsWindow.xaml
+++ b/VagrantTray/UI/BookmarkSettingsWindow.xaml
@@ -1,36 +1,28 @@
 ﻿<Window
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:ViewModel="clr-namespace:MikeWaltonWeb.VagrantTray.ViewModel"
+	xmlns:viewModel="clr-namespace:MikeWaltonWeb.VagrantTray.ViewModel"
 	x:Class="MikeWaltonWeb.VagrantTray.BookmarkSettingsWindow"
-	Title="BookmarkSettingsWindow"
-	Width="640" Height="480">
-	
-	<Window.DataContext>
-		<ViewModel:BookmarkViewModel/>
-	</Window.DataContext>
+	Title="Bookmark Settings"
+	Width="400" Height="175">
 
-	<StackPanel>
-		<StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="10">
-			<Label Content="Bookmark Name:" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-			<TextBox TextWrapping="Wrap" VerticalAlignment="Center" Margin="0,0,-200,0" Text="{Binding BookmarkName, Mode=TwoWay}"/>
-		</StackPanel>
-		<StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="10">
-			<Label Content="Vagrant ID:" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-            <TextBox TextWrapping="Wrap" VerticalAlignment="Center" Margin="0,0,-200,0" Text="{Binding VagrantInstanceId, Mode=OneWay}"/>
-		</StackPanel>
-		<StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="10">
-			<Label Content="Vagrant Name:" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-            <TextBox TextWrapping="Wrap" VerticalAlignment="Center" Margin="0,0,-200,0" Text="{Binding VagrantInstanceName, Mode=OneWay}"/>
-		</StackPanel>
-		<StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="10">
-			<Label Content="Location:" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-            <TextBox Name="TextLocation" TextWrapping="Wrap" VerticalAlignment="Center" Margin="10,0" Text="{Binding VagrantInstanceLocation, Mode=OneWay}"/>
-            <Button Content="Browse" Command="{Binding BrowseCommand}" CommandParameter="{Binding ElementName=TextLocation, Path=Text}"/>
+    <Window.DataContext>
+        <viewModel:BookmarkViewModel/>
+    </Window.DataContext>
+
+    <StackPanel>
+        <DockPanel VerticalAlignment="Top" Margin="10">
+    		<Label Content="Bookmark Name:" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    		<TextBox VerticalAlignment="Center" Text="{Binding BookmarkName, Mode=TwoWay}"/>
+    	</DockPanel>
+        <DockPanel VerticalAlignment="Top" Margin="10">
+        	<Label Content="Location:" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        	<Button Content="Browse" Command="{Binding BrowseCommand}" CommandParameter="{Binding Text, ElementName=TextLocation}" DockPanel.Dock="Right" HorizontalAlignment="Right"/>
+        	<TextBox x:Name="TextLocation" VerticalAlignment="Center" Margin="10,0" Text="{Binding VagrantInstanceLocation, Mode=OneWay}"/>
+        </DockPanel>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="10">
+            <Button x:Name="ButtonSave" Command="{Binding SaveCommand}" Content="Save" VerticalAlignment="Center" Margin="0,0,5,0"/>
+            <Button x:Name="ButtonCancel" Command="{Binding CancelCommand}" Content="Cancel" VerticalAlignment="Center" Margin="5,0,0,0"/>
         </StackPanel>
-		<StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
-			<Button x:Name="ButtonSave" Command="{Binding SaveCommand}" Content="Save" VerticalAlignment="Center" Margin="0,0,5,0"/>
-			<Button x:Name="ButtonCancel" Command="{Binding CancelCommand}" Content="Cancel" VerticalAlignment="Center" Margin="5,0,0,0"/>
-		</StackPanel>
-	</StackPanel>
+    </StackPanel>
 </Window>
